--- a/wwwroot/lib/Bootstrap/css/cover.css
+++ b/wwwroot/lib/Bootstrap/css/cover.css
@@ -121,3 +121,22 @@ body {
   z-index:9999; 
   border-radius:0px
 }
+
+.floatMessages
+{
+  position: fixed; /* Set the navbar to fixed position */
+  bottom: 0; /* Position the navbar at the top of the page */
+  left: 0;
+  width: 200px; 
+  overflow: hidden;
+  z-index: 9999;
+}
+
+.floatMessages span
+{
+  font-size: 9px;
+  text-align: left;
+  float: left;
+  clear: left;
+  z-index: 99999;
+}
